--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,11 @@ nodaemon=true
 [program:apache2]
 command=/usr/sbin/apache2ctl -D FOREGROUND
 autorestart=true
+stdout_logfile=/var/log/apache2.log
+stderr_logfile=/var/log/apache2_err.log
 
-[program:mysqld]
-command=/usr/sbin/mysqld --user=mysql --console
+[program:mariadb]
+command=/usr/bin/mariadbd --skip-networking=0 --bind-address=0.0.0.0
 autorestart=true
+stdout_logfile=/var/log/mariadb.log
+stderr_logfile=/var/log/mariadb_err.log
