--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ stdout_logfile=/var/log/apache2.log
 stderr_logfile=/var/log/apache2_err.log
 
 [program:mariadb]
-command=/usr/bin/mariadbd --skip-networking=0 --bind-address=0.0.0.0
+command=/usr/sbin/mysqld --bind-address=0.0.0.0
 autorestart=true
 stdout_logfile=/var/log/mariadb.log
 stderr_logfile=/var/log/mariadb_err.log
