--- a/docker-build.yml
+++ b/docker-build.yml
@@ -1,1 +1,33 @@
+name: Build and Push Docker Image
+
+on:
+  push:
+    tags:
+      - 'v*'  # Triggers on tags like v1.0, v2.1.3, etc.
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
+        run: |
+          IMAGE_NAME=bafplus/mytachodata
+          TAG=${GITHUB_REF#refs/tags/}
+          docker build -t $IMAGE_NAME:$TAG .
+
+      - name: Push Docker image
+        run: |
+          IMAGE_NAME=bafplus/mytachodata
+          TAG=${GITHUB_REF#refs/tags/}
+          docker push $IMAGE_NAME:$TAG
 
