--- a/.github/workflows/auto-docker.yml
+++ b/.github/workflows/auto-docker.yml
@@ -1,5 +1,8 @@
 name: Auto Build and Push Docker
 
+permissions:
+  contents: write  # Needed to push tags
+
 on:
   push:
     branches:
@@ -8,8 +11,9 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Needed to access all tags
@@ -22,10 +26,9 @@ jobs:
           echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
           echo "Latest tag is $LATEST_TAG"
 
-      - name: Bump version
+      - name: Bump patch version
         id: bump
         run: |
-          # Extract major.minor.patch
           VERSION=${LATEST_TAG#v}
           IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
           PATCH=$((PATCH + 1))
@@ -33,12 +36,12 @@ jobs:
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
           echo "New tag will be $NEW_TAG"
 
-      - name: Create new Git tag
+      - name: Create and push new Git tag
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git tag ${{ env.NEW_TAG }}
-          git push origin ${{ env.NEW_TAG }}
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} ${{ env.NEW_TAG }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
