--- a/.github/workflows/auto-docker.yml
+++ b/.github/workflows/auto-docker.yml
@@ -59,5 +59,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/bafplus:${{ env.NEW_TAG }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/mytachodata:${{ env.NEW_TAG }}
             ${{ secrets.DOCKER_HUB_USERNAME }}/mytachodata:latest
