--- a/.github/workflows/auto-docker.yml
+++ b/.github/workflows/auto-docker.yml
@@ -1,12 +1,12 @@
-name: Auto Build and Push Docker
-
-permissions:
-  contents: write  # Needed to push tags
+name: Build and Push Docker on Version Tag
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*.*.*'  # Only trigger on tags like v1.0.0, v2.3.4
+
+permissions:
+  contents: read  # We don't need write access now
 
 jobs:
   docker:
@@ -15,33 +15,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Needed to access all tags
 
-      - name: Get latest tag
-        id: get_tag
-        run: |
-          git fetch --tags
-          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
-          echo "Latest tag is $LATEST_TAG"
-
-      - name: Bump patch version
-        id: bump
-        run: |
-          VERSION=${LATEST_TAG#v}
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-          PATCH=$((PATCH + 1))
-          NEW_TAG="v$MAJOR.$MINOR.$PATCH"
-          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-          echo "New tag will be $NEW_TAG"
-
-      - name: Create and push new Git tag
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git tag ${{ env.NEW_TAG }}
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} ${{ env.NEW_TAG }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -49,8 +25,12 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Extract version from tag
+        id: vars
+        run: |
+          VERSION=${GITHUB_REF_NAME}
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Building version $VERSION"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -59,5 +39,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/mytachodata:${{ env.NEW_TAG }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/mytachodata:${{ env.VERSION }}
             ${{ secrets.DOCKER_HUB_USERNAME }}/mytachodata:latest
